--- a/components/Hero/Hero.module.scss
+++ b/components/Hero/Hero.module.scss
@@ -5,7 +5,7 @@
   min-height: 100vh;
   display: flex;
   align-items: center;
-  padding-top: 100px;
+  padding-top: 130px;
   padding-bottom: 4rem;
   overflow: hidden;
 
